--- a/Lab1-2-DrawAsterisks/Lab1-2-DrawAsterisks/Lab1-2-DrawAsterisks.csproj
+++ b/Lab1-2-DrawAsterisks/Lab1-2-DrawAsterisks/Lab1-2-DrawAsterisks.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{35D03DDC-B017-41B3-9D65-B9212BAE2D81}</ProjectGuid>
+    <ProjectGuid>{F728635E-8EA2-43D8-8D43-AF2C394C77C8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DrawAsterisks</RootNamespace>
-    <AssemblyName>DrawAsterisks</AssemblyName>
+    <RootNamespace>Lab1_2_DrawAsterisks</RootNamespace>
+    <AssemblyName>Lab1-2-DrawAsterisks</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
